studio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: studio
  name: studio
  namespace: studio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studio
  template:
    metadata:
      labels:
        app: studio
    spec:
      containers:
      - image: nginx
        name: studio
