studio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studio-ingress
  namespace: studio
spec:
  ingressClassName: nginx
  rules:
  - host: studio.myborlingstudio.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: studio-svc
            port:
              number: 80
